--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 .title{
     color: brown;
 }
+#head{
+    display: flex;
+    justify-content: center;
+}
+
+body{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
